fix(css): at a bit more whitespace on mobile hero

--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -79,6 +79,7 @@
 
   .HeroTitle {
     grid-column: 1 / 4;
+    margin-top: var(--s5);
   }
 
   .HeroText {
